Feature: Implement Kafka Avro filtering by exec_id